- added dark theme support - changed color attrs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="date">12/8/22</string>
     <string name="this_is_a_recent_msg">this is a recent msg</string>
     <string name="_1">1</string>
+    <string name="dotted_lines">------</string>
 </resources>
